style fixes for footer location on small devices with high res. kind of messes up the top border for med devices though.

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ ul {
 }
 
 .footerContacts {
-  padding-bottom: 40px;
+  padding-bottom: 55px;
 }
 
 ul.nav {
@@ -346,9 +346,19 @@ div.gm-style-iw > div > div {
     max-width: 94%;
   }
 
+/* added to fix footer getting pushed up above the map on small devices with high res but it causes too large top border on med devices/lower res small devices */
+  footer {
+    margin-top: 55px;
+  }
+
   .footerContacts {
-    padding-bottom: 40px;
-    height: 125px;
+    padding-bottom: 10px;
     text-align: center;
+  }
+
+  .mapDiv {
+    height: 350px;
+    width: 100%;
+    padding-bottom: 10%;
   }
 }
